--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "ฟังเรื่องคามลำดับจากพระคริสตคัมภีร์ Audio Northern Thai Bible stories",
-	"short_name" : "เรื่องคามลำดับ NOD Bible stories",
+	"name": "ฟังเรื่องตามลำดับจากพระคริสตธรรมคัมภีร์ Audio Northern Thai Bible stories",
+	"short_name" : "เรื่องตามลำดับ NOD Bible stories",
 	"start_url": "./index.html",
 	"scope" : "./",
 	"icons": [
